--- a/index.html
+++ b/index.html
@@ -8,29 +8,25 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div id="iii">
-
-
-
-
-
-  </div>
-  <div id="app">
+  <header>
+    <p>Vue.jsお試し</p>
+  </header>
+  <main id="app">
     <h1>DEMO</h1>
     <p>出力：{{ message }}</p>
 
-    <p>このinputタグに入力した文字は上のテキストに連動します。</p>
-    <input type="text" v-model="message">
+    <button @click="countUp()">カウント</button>
 
-    <p v-if="message === ''">テキスト未入力です。</p>
-    <p v-else>テキスト入力中</p>
+    <!-- <p>このinputタグに入力した文字は上のテキストに連動します。</p>
+    <input type="text" v-model="message"> -->
 
-    <ul class="list">
+    <!-- <p v-if="message === ''">テキスト未入力です。</p>
+    <p v-else>テキスト入力中</p> -->
+
+    <!-- <ul class="list">
       <li v-for="item in listData">{{ item }}</li>
-    </ul>
-
-  </div>
-  
+    </ul> -->
+  </main>
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="js/script.js"></script>
 </body>
